--- a/src/CabanaConAsAService.Api/appsettings.json
+++ b/src/CabanaConAsAService.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=7f1c0921-d105-4ec7-a8f6-f8f0d8b20f63;IngestionEndpoint=https://eastus-1.in.applicationinsights.azure.com/"
+  }
 }
