--- a/src/CabanaConAsAService.Api/CabanaConAsAService.Api.csproj
+++ b/src/CabanaConAsAService.Api/CabanaConAsAService.Api.csproj
@@ -2,11 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>73787b27-3f34-4036-b68d-88889a0e4d04</UserSecretsId>
+    <ApplicationInsightsResourceId>/subscriptions/4ba4fa4d-d4e1-48a7-a863-94931a459bbe/resourcegroups/sdm-caas-rg/providers/Microsoft.Insights/components/CabanaConAsAServiceApi-AI</ApplicationInsightsResourceId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.15.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.2" />
   </ItemGroup>
 
